# statio

./: CMakeLists.txt  README.md
include/statio/: main_window.hpp  system_info.hpp
src/: main.cpp  main_qt.cpp  main_window.cpp  system_info.cpp
tools/: statio_py.py
tools/plugins/: uptime_plugin.py
